# sim_soens_lite

./: MANIFEST.in  README.md  gitignore  pyproject.toml  requirements.txt  setup.py
sim_soens_lite.egg-info/: PKG-INFO  SOURCES.txt
src/sim_soens/: soen_initialize.py  soen_utilities.py  super_net.py
src/sim_soens/soen_sim_data/: pwl_drive__num_pulses_10__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__01.soen  pwl_drive__num_pulses_10__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__02.soen  pwl_drive__num_pulses_10__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__03.soen  pwl_drive__num_pulses_10__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__04.soen  pwl_drive__num_pulses_10__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__05.soen  pwl_drive__num_pulses_160__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__01.soen  pwl_drive__num_pulses_160__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__02.soen  pwl_drive__num_pulses_160__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__03.soen  pwl_drive__num_pulses_160__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__04.soen  pwl_drive__num_pulses_160__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__05.soen  pwl_drive__num_pulses_160__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__2022-07-07_13-10-54.soen  pwl_drive__num_pulses_160__pwl__phi_r_0.20-0.50__duration_5.00-40.00__rest_10.00-100.00__2022-10-12_14-02-24.soen  (+13 more)
src/sim_soens_lite/: soen_initialize.py  soen_plotting.py  soen_time_stepper.py  super_argparse.py  super_functions.py  super_node.py
src/sim_soens_lite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sim_soens_lite_lite.egg-info/: PKG-INFO  SOURCES.txt
(+4 files in other folders)
