[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim_soens_lite"
version = "0.0.1"
description = "Simulator for Superconducting Optoelectronic Networks"
readme = "README.md"
authors = [{ name = "Ryan", email = "rmoloughlin11@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["optoelectronics", 
	    ]
dependencies = [
    "numpy",
    "matplotlib",
    "seaborn",
    "networkx",
    "keras",
    "scikit-learn",
    "tensorflow",
    'markupsafe',
    "brian2"
]
requires-python = ">=3.5"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/ryangitsit/sim_soens_lite"
